<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tongue Twisters</string>
    <string name="action_settings">Settings</string>
    <string name="slide_1_title">Level 1</string>
    <string name="slide_1_desc">Annihilatory Armageddon</string>
    <string name="slide_2_title">Level 2</string>
    <string name="slide_2_desc">Brain Blaster</string>
    <string name="slide_3_title">Level 3</string>
    <string name="slide_3_desc">Cosmic Clusters</string>
    <string name="slide_4_title">Level 4</string>
    <string name="slide_4_desc">Doomsday Destruction</string>
    <string name="slide_5_title">Level 5</string>
    <string name="slide_5_desc">Extensive Extremety</string>
    <string name="slide_6_title">Level 6</string>
    <string name="slide_6_desc">Fatal Frost</string>
    <string name="slide_7_title">Level 7</string>
    <string name="slide_7_desc">Gliding Gears</string>
    <string name="slide_8_title">Level 8</string>
    <string name="slide_8_desc">Hefty Harks</string>
    <string name="slide_9_title">Level 9</string>
    <string name="slide_9_desc">Inclusive Incompetence</string>
    <string name="slide_10_title">Level 10</string>
    <string name="slide_10_desc">Jarring Jigsaw</string>
    <string name="slide_11_title">Your Twisters</string>
    <string name="slide_11_desc">Create, Modiy, Customize Your Own Twisters With Your Imagination.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string-array name="level_number_headers">
        <item>NULL</item>
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
        <item>Level 5</item>
        <item>Level 6</item>
        <item>Level 7</item>
        <item>Level 8</item>
        <item>Level 9</item>
        <item>Level 10</item>
    </string-array>
    <string-array name="level_names">
        <item>NULL</item>
        <item>Annihilatory Armageddon</item>
        <item>Brain Blaster</item>
        <item>Cosmic Clusters</item>
        <item>Doomsday Destruction</item>
        <item>Extensive Extremety</item>
        <item>Fatal Frost</item>
        <item>Gliding Gears</item>
        <item>Hefty Harks</item>
        <item>Inclusive Incompetence</item>
        <item>Jarring Jigsaw</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide_10_button">CLICK TO VIEW</string>
    <string name="slide_9_button">CLICK TO VIEW</string>
    <string name="slide_8_button">CLICK TO VIEW</string>
    <string name="slide_7_button">CLICK TO VIEW</string>
    <string name="slide_6_button">CLICK TO VIEW</string>
    <string name="slide_5_button">CLICK TO VIEW</string>
    <string name="slide_4_button">CLICK TO VIEW</string>
    <string name="slide_3_button">CLICK TO VIEW</string>
    <string name="slide_2_button">CLICK TO VIEW</string>
    <string name="slide_1_button">CLICK TO VIEW</string>
    <string name="title_activity_level">LEVEL</string>
    <string name="title_activity_detail">Tongue Twisters</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string-array name="levels">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
        <item>Level 5</item>
        <item>Level 6</item>
        <item>Level 7</item>
        <item>Level 8</item>
        <item>Level 9</item>
        <item>Level 10</item>
    </string-array>
    <string-array name="levelHeaders">
        <item>Annihilatory Armageddon</item>
        <item>Brain Blaster</item>
        <item>Cosmic Clusters</item>
        <item>Doomsday Destruction</item>
        <item>Extensive Extremety</item>
        <item>Fatal Frost</item>
        <item>Gliding Gears</item>
        <item>Hefty Harks</item>
        <item>Inclusive Incompetence</item>
        <item>Jarring Jigsaw</item>
    </string-array>
    <string-array name="photoUrls">
        <item>https://2.bp.blogspot.com/-IY-IOkq2V5A/WJBfTUFfrTI/AAAAAAAAAFY/rurHHcN20r0EVurB8NFU3BB15B1wubJJgCLcB/s1600/placeholder.png</item>
        <item>https://1.bp.blogspot.com/-e3cvqWcBdhc/WJBgDvUM6BI/AAAAAAAAAFk/SOlb9rdvi7gm5iThWrCoH273_kn0rQo3gCLcB/s1600/ph2.png</item>
        <item>https://1.bp.blogspot.com/-OYwFn64dzV0/WJBfWvYaXaI/AAAAAAAAAFc/1egquqeEF30HrOgarJflAGp8fXqyBeKDQCLcB/s1600/ph4.jpg</item>
        <item>http://2.bp.blogspot.com/-k1SRZ0vh8MI/WRH6PNTiE1I/AAAAAAAAARc/y57FJha4pHIs0vm2v9DMJuKcS9PpEHyqQCK4B/s1600/wall3.jpg</item>
        <item>http://2.bp.blogspot.com/-VYU5OWGtee8/WRH6N-hvs0I/AAAAAAAAARE/T5Bc-heYbEQWyJ8UHQ2yY4x9JAtorNN3QCK4B/s1600/wall2.png</item>
        <item>https://3.bp.blogspot.com/-wCIrRQkOkBI/WJBgD7IU0cI/AAAAAAAAAFo/TvEV52hMIdMrmPF2nYqe4rBt6MQl4hXzwCLcB/s1600/ph3.jpg</item>
        <item>http://2.bp.blogspot.com/-nZ1SleMQpAE/WRH6OEqit8I/AAAAAAAAARU/J3FXjkgy-W08Z-R52vonP-kU48YkacQMACK4B/s1600/whale_3-wallpaper-1440x900.jpg</item>
        <item>https://4.bp.blogspot.com/-PQ2dFPxs6dA/WIo5arONKII/AAAAAAAAAD8/_KPNyZuSY0IOhtZf7h2ByJWd7xvWZMjZgCLcB/s1600/3.jpg</item>
        <item>https://3.bp.blogspot.com/-FTKj7QUV61w/WJBgEaJclgI/AAAAAAAAAFw/dX-wb54JX-AYiDGPPB1Z3lvS7ZCoUNKBACLcB/s1600/ph6.png</item>
        <item>https://2.bp.blogspot.com/-Cos2v7ZoI8o/WJBgDyUENNI/AAAAAAAAAFs/EGDcj0Sp2HEkM82_Z8A8Dl-1P_4B3bvAgCLcB/s320/ph5.png</item>
    </string-array>
    <string-array name="two_headers">
        <item>Calm Cram</item>
        <item>Saint\’s Tent</item>
        <item>Robillo Ruins</item>
        <item>Sick Hicks</item>
        <item>Race Horse</item>
        <item>Pickford\’s Packers</item>
        <item>Gobbling Gobbles</item>
        <item>Twit and Tat</item>
        <item>Sheriff\’s Shoes</item>
        <item>Cow Pie</item>
        <item>Four Friends</item>
        <item>Saw a Saw</item>
        <item>Thought A Thought</item>
        <item>Greek Grapes</item>
        <item>Sounding Sounds</item>
    </string-array>
    <string-array name="three_headers">
        <item>Dishy Fish</item>
        <item>Inside Out</item>
        <item>Noticing Notice</item>
        <item>Susan Shoe Shop</item>
        <item>Fisherman Fisher</item>
        <item>I Wish</item>
        <item>Cooking Cookies</item>
        <item>Hog Groundhog</item>
        <item>Jam Spreading</item>
        <item>Stunt Kite</item>
        <item>Coloured Caterpillars</item>
        <item>Green Grape Ape</item>
        <item>Fly and Flee</item>
        <item>Dew Drop</item>
        <item>Sheet Slitter</item>
    </string-array>
    <string-array name="four_headers">
        <item>Coy Codes</item>
        <item>Thirty Three Thieves</item>
        <item>3-D Thoughts</item>
        <item>Luke Likes</item>
        <item>Pick Pickens</item>
        <item>Woods Woodchuck</item>
        <item>Papa Pete</item>
        <item>Shoeshine Shop</item>
        <item>Sagacios Sally Sanders</item>
        <item>Bitter Butter</item>
        <item>Two to Two, Too</item>
        <item>Swan Swam</item>
        <item>Twisty Twits</item>
        <item>Witches Watch Watches</item>
        <item>Two to Two, What to do?</item>
    </string-array>
    <string-array name="five_headers">
        <item>Bare Berry</item>
        <item>Fresh French</item>
        <item>Cheap Cheddar</item>
        <item>Yally Bally</item>
        <item>Ale\’s Pale</item>
        <item>Peel Eel</item>
        <item>Understand?</item>
        <item>Feeling Love</item>
        <item>Pessimistic Pest</item>
        <item>Turtle Hurdle</item>
        <item>Sit in Shop</item>
        <item>Black Blake</item>
        <item>Come and Calm</item>
        <item>Window Washer</item>
        <item>Mr. See and Mr. Soar</item>
    </string-array>
    <string-array name="six_headers">
        <item>Tommy Tucker</item>
        <item>Exercising Executioner</item>
        <item>I Saw Esau</item>
        <item>Sleazy Shysters</item>
        <item>Grapes</item>
        <item>Seething Sea</item>
        <item>Sycorax</item>
        <item>Butter Batter</item>
        <item>Trouble Trouble</item>
        <item>Smart Fella</item>
        <item>Springs</item>
        <item>Lowly Lone</item>
        <item>Stump Stunk</item>
        <item>Larry Hurley</item>
        <item>Thought a Thought</item>
    </string-array>
    <string-array name="seven_headers">
        <item>Double Bubble</item>
        <item>Suzie Seaword</item>
        <item>She Stood</item>
        <item>Fig Plucker</item>
        <item>Sheet</item>
        <item>Fried Fish</item>
        <item>Imaginary Menagerie</item>
        <item>Ghosts</item>
        <item>Tudor</item>
        <item>Nurse</item>
        <item>She Sells</item>
        <item>Noise Annoys</item>
        <item>King Sing</item>
        <item>I Wish</item>
        <item>Pipe_Type_Bite</item>
    </string-array>
    <string-array name="eight_headers">
        <item>Pasture</item>
        <item>Tree Toad</item>
        <item>Chicago</item>
        <item>Liquor Lock</item>
        <item>Doctor</item>
        <item>A Quarter</item>
        <item>Eight Eight</item>
        <item>Thopilus</item>
        <item>Esau Wood</item>
        <item>Ed Nott</item>
        <item>Chester Chose</item>
        <item>Moses Supposes</item>
        <item>Three Tree Turtle</item>
        <item>Gladys</item>
        <item>Gift</item>
    </string-array>
    <string-array name="nine_headers">
        <item>Tito and Tato</item>
        <item>Theda Thought</item>
        <item>Charley</item>
        <item>Heda Hopes</item>
        <item>Sniffing Snuffer</item>
        <item>Sheila Sells</item>
        <item>Tongue Twister</item>
        <item>Colliding</item>
        <item>Light Night</item>
        <item>Don\’t Know Why?</item>
        <item>Teery Teeter</item>
        <item>Cat Crept</item>
        <item>Plan To Fan Pan</item>
        <item>All I Felt</item>
        <item>Farells Feature</item>
    </string-array>
    <string-array name="ten_headers">
        <item>Kitten Eating Chicken</item>
        <item>Tree Toad</item>
        <item>Thifty Thephilus</item>
        <item>Wilson Winston</item>
        <item>Professor</item>
        <item>Thrusts</item>
        <item>Synonym Cinnamon</item>
        <item>A Tall Tale</item>
        <item>Sinious Snake</item>
        <item>Silly Sally</item>
        <item>Corythosaurus</item>
        <item>Tell It</item>
        <item>Bob and Bob</item>
        <item>Sixth Sick Sheils</item>
        <item>Mr Knott and Mr Watt</item>
    </string-array>
    <string name="level_number_header_dummy_example">level 1</string>
    <string name="level_name_dummy_example">annihilatory armageddon</string>
    <string name="twister_number_dummy_example">twister 1</string>
    <string name="twister_name_dummy_example">Robillo Ruins</string>
    <string name="twister_dummy_example">
        \tSomething in a thirty-acre thermal thicket of thorns and thistles thumped and thundered threatening the three-D thoughts of Amit the thug-although, theatrically, it was only the thirteen thousand thistles and thorns through the underneath of his thigh that the thirty year old thug thought of that morning.\n
    </string>
    <string name="share_with_friends">share with friends</string>
</resources>