<!-- fragment_screen_slide_page.xml -->
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10sp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:id="@+id/imageView1"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slide_6_title"
                android:textSize="25sp"
                android:textColor="#FFF"
                android:layout_margin="4sp"
                android:gravity="center"
                android:fontFamily="sans-serif-smallcaps"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slide_6_desc"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="4sp"
                android:textColor="#FFF"
                android:fontFamily="sans-serif-smallcaps"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/slide_6_button"
                android:textSize="20sp"
                android:textColor="#FFF"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/detail"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
