<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".new_app.level_screen.LevelActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:textColor="@color/colorPrimaryIntensity3"
        android:background="@color/colorWhiteShade"
        android:paddingTop="10sp"
        android:id="@+id/level_number_header_text_view"
        android:text="@string/level_number_header_dummy_example"
        android:textSize="25sp"
        android:gravity="center"
        fontPath="fonts/blacklite.ttf"
        tools:ignore="MissingPrefix"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryIntensity3"
        android:text="@string/level_name_dummy_example"
        android:background="@color/colorWhiteShade"
        android:id="@+id/level_name_text_view"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingBottom="15sp"
        fontPath="fonts/Comfortaa-Light.ttf"
        tools:ignore="MissingPrefix"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:background="@color/colorPrimaryIntensity9"
        tools:ignore="ContentDescription,SmallSp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:background="@color/white"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryIntensity4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhiteShade"
                android:layout_marginTop="10sp"
                android:id="@+id/twister_number_text_view"
                android:text="@string/twister_number_dummy_example"
                android:textSize="30sp"
                android:gravity="center"
                fontPath="fonts/brighter.ttf"
                tools:ignore="MissingPrefix"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhiteShade"
                android:paddingBottom="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:id="@+id/twister_name_text_view"
                android:text="@string/twister_name_dummy_example"
                android:textSize="26sp"
                android:gravity="center"
                fontPath="fonts/blacklite.ttf"
                tools:ignore="MissingPrefix"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="120sp"
                android:paddingBottom="130sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhiteShade"
                    android:textColor="@color/colorAccentIntensity5"
                    android:text="@string/twister_dummy_example"
                    android:id="@+id/twister_text_view"
                    android:lineSpacingExtra="10.0sp"
                    fontPath="fonts/Comfortaa-Bold.ttf"
                    tools:ignore="MissingPrefix"
                    android:textSize="20sp"
                    android:paddingTop="15sp"
                    android:paddingLeft="15sp"
                    android:paddingRight="15sp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:alpha="0.8"
                    android:layout_marginTop="10sp"
                    android:src="@drawable/share_with_friends"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5sp"
                    android:textColor="@color/colorIntensity8"
                    android:text="@string/share_with_friends"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteShade"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25sp"
                android:layout_marginTop="8sp"
                android:layout_marginLeft="10sp"
                android:layout_marginBottom="5sp"
                app:cardBackgroundColor="@color/colorAccentIntensityOpaque2"
                android:id="@+id/previous_twister_button_card"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:tint="@color/colorWhiteShade"
                    android:padding="5sp"
                    android:src="@drawable/round_chevron_left_black_48"
                    tools:ignore="ContentDescription" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5sp"
                android:textColor="@color/colorPrimaryIntensity6"
                android:text="PREV"
                android:layout_marginLeft="5sp"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                tools:ignore="MissingPrefix,RtlHardcoded"
                fontPath="fonts/Comfortaa-Light.ttf"/>

        </LinearLayout>

        <View
            android:layout_width="0sp"
            android:layout_height="12sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25sp"
                android:layout_marginTop="8sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="5sp"
                app:cardBackgroundColor="@color/colorAccentIntensityOpaque2"
                android:id="@+id/next_twister_button_card"
                tools:ignore="RtlHardcoded">

                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:tint="@color/colorWhiteShade"
                    android:padding="5sp"
                    android:src="@drawable/round_chevron_right_black_48"
                    tools:ignore="ContentDescription" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5sp"
                android:textColor="@color/colorPrimaryIntensity6"
                android:text="NEXT"
                android:layout_marginRight="5sp"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                tools:ignore="MissingPrefix,RtlHardcoded"
                fontPath="fonts/Comfortaa-Light.ttf"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>